Iniciando a validação do formulario de cadastro

--- a/src/app/pages/cadastrar/cadastrar.component.css
+++ b/src/app/pages/cadastrar/cadastrar.component.css
@@ -57,6 +57,17 @@
     cursor: pointer;
     transition: background-color 0.3s;
   }
+
+  .caixa-validacao {
+    margin-top: 3em;
+  }
+
+  .caixa-validacao ul {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    list-style: none;
+  }
   
   .signup-button:hover {
     background-color: #45a049;
