Alteração no link do header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
 			<a routerLink="/contas"  class="selected">Contas</a>
 			<a routerLink="/ocorrencias" >Ocorrências</a>
 			<a routerLink="/avisos" >Avisos</a>
-			<a routerLink="/cadastrar" class="login-btn">SignUp</a>
+			<a routerLink="/cadastrar" class="login-btn">Cadastro</a>
 			<a routerLink="/login" class="signUp-btn">Login</a>
 		</nav>
 	</div>
