--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -41,6 +41,21 @@
     justify-content: center;
     gap: 2em;
   }
+
+  .logout-button {
+    background-color: #da0e0e;
+    color: #ffffff;
+    padding: 8px 15px;
+    margin-left: 8px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .logout-button:hover {
+    background-color: #7a2626;
+  }
   
   button {
     margin-top: 1em;
@@ -56,7 +71,7 @@
     background-color: #d41d30;
   }
   
-  button:hover {
+  .delete-button:hover {
     background-color: #9c1919;
   }
   
