Conserto de rotas no header Logado

--- a/src/app/components/header-logado/header-logado.component.html
+++ b/src/app/components/header-logado/header-logado.component.html
@@ -9,9 +9,9 @@
       <a routerLink="/contas" class="selected">Contas</a>
       <a routerLink="/ocorrencias">Ocorrências</a>
       <a routerLink="/avisos">Avisos</a>
-      <a routerLink="/avisos">Visitantes</a>
-      <a routerLink="/avisos">Serviços</a>
-      <a routerLink="/avisos">Reservas</a>
+      <a routerLink="/visitantes">Visitantes</a>
+      <a routerLink="/servicos">Serviços</a>
+      <a routerLink="/areas-comuns">Reservas</a>
     </nav>
 
     <div class="user-profile">
