Adicionando Painel na tabela de contas

--- a/src/app/pages/contas/contas.component.css
+++ b/src/app/pages/contas/contas.component.css
@@ -1,4 +1,9 @@
 .table-container {
+  background-color: #fff;
+  padding: 3em 1em 3em 1em;
+  margin: 3em auto;
+  border-radius: 8px;
+  width: 90%;
   display: flex;
   justify-content: center;
 }
